<resources>
    <string name="app_name">Popular Movies</string>
    <string name="tmdb_key_name">api_key</string>
    <string name="tmdb_key_value"></string>
    <string name="tmdb_poster_base_url">http://image.tmdb.org/t/p/</string>

    <string name="tmdb_popularity_sort_scheme">https</string>
    <string name="tmdb_popularity_sort_host">api.themoviedb.org</string>
    <string name="tmdb_popularity_sort_path">/3/movie/popular</string>

    <string name="tmdb_top_rated_sort_scheme">https</string>
    <string name="tmdb_top_rated_sort_host">api.themoviedb.org</string>
    <string name="tmdb_top_rated_sort_path">/3/movie/top_rated</string>

    <string name="tmdb_extras_scheme">https</string>
    <string name="tmdb_extras_host">api.themoviedb.org</string>
    <string name="tmdb_extras_path">3/movie</string>
    <string name="tmdb_extras_videos_path">/videos</string>
    <string name="tmdb_extras_reviews_path">/reviews</string>

    <string name="tmdb_youtube_scheme">https</string>
    <string name="tmdb_youtube_host">www.youtube.com</string>
    <string name="tmdb_youtube_path">/watch</string>
    <string name="tmdb_youtube_view_param">v</string>
    <string name="tmdb_youtube_thumb_url">https://img.youtube.com/vi/{video_id}/hqdefault.jpg</string>
    <string name="tmdb_youtube_thumb_key_replacement">{video_id}</string>
    <string name="tmdb_youtube_list_label">Videos</string>

    <string name="tmdb_review_list_label">Reviews</string>

    <string name="DENSITY_120">w92</string>
    <string name="DENSITY_160">w154</string>
    <string name="DENSITY_213">w185</string>
    <string name="DENSITY_240">w342</string>
    <string name="DENSITY_320">w500</string>
    <string name="DENSITY_480">w780</string>
    <string name="DENSITY_640">original</string>

    <string name="SORT_POPULAR">Most popular</string>
    <string name="SORT_VOTES">Highest rated</string>
    <string name="details_release_label">Release Date</string>
    <string name="details_vote_label">Average Vote</string>
    <string name="details_synopsis_label">Synopsis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
